force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/Sales_Engineer_TT_Mapping__c.object-meta.xml
<CustomObject>
    <label>Sales Engineer TT Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Org</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Engineer TT Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>