force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/fields/Exclude_Sales_Engg__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Sales_Engg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter comma separated email addresses of the Sales Engineer you want to exclude in the TT Page</inlineHelpText>
    <label>Exclude Sales Engineer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>