force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/fields/Include_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Include_Sales_Engineer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter comma separated email addresses of the Sales Engineer you want to include in the TT Page</inlineHelpText>
    <label>Include Sales Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>