force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/fields/PEO_Strategic_Role__c.field-meta.xml
<CustomField>
    <fullName>PEO_Strategic_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEO Strategic Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>