force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/fields/Sales_Engineer_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Engineer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>