force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/fields/Sales_Rep_Job_Ttitle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Job_Ttitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep Job Ttitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>