force-app/main/default/objects/Sales_Engineer_TT_Mapping__c/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep_Job_Ttitle__c</columns>
    <columns>Sales_Engineer_Title__c</columns>
    <columns>PEO_Strategic_Role__c</columns>
    <columns>Include_Sales_Engineer__c</columns>
    <columns>Exclude_Sales_Engg__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
</ListView>